--- a/.github/workflows/check-qmd-render.yml
+++ b/.github/workflows/check-qmd-render.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         file:
-          - slides
+          - presentation
           - report
 
     container:
