--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,22 @@
 
 S3method(coef,mHealthDose)
 S3method(confint,mHealthDose)
+S3method(plot,mHealthDoses.summary)
 S3method(print,mHealthDose)
 S3method(print,summary.mHealthDose)
 S3method(summary,mHealthDose)
+S3method(summary,mHealthDoses)
 export(boot_samples)
 export(ee.boruvka)
 export(gee_ind)
 export(get.sim.rslts2)
 export(mHealthDose)
+export(mHealthDoses)
 export(pval)
 export(simMhealth)
 export(simulate_boruvka)
 import(data.table)
+importFrom(gridExtra,grid.arrange)
 importFrom(parallel,mclapply)
 importFrom(stats,as.formula)
 importFrom(stats,lm)
