just need to document functions and write vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,12 @@ export(pval)
 export(simMhealth)
 export(simulate_boruvka)
 import(data.table)
+import(ggplot2)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,slice)
 importFrom(gridExtra,grid.arrange)
 importFrom(parallel,mclapply)
 importFrom(stats,as.formula)
