Final Project Submission @chipmanj @gvegayon

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ S3method(summary,mHealthDoses)
 export(boot_samples)
 export(ee.boruvka)
 export(gee_ind)
-export(get.sim.rslts2)
 export(mHealthDose)
 export(mHealthDoses)
 export(pval)
@@ -23,8 +22,12 @@ importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,slice)
+importFrom(dplyr,transmute)
 importFrom(gridExtra,grid.arrange)
+importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
+importFrom(parallel,parSapply)
+importFrom(parallel,stopCluster)
 importFrom(stats,as.formula)
 importFrom(stats,lm)
 importFrom(stats,pnorm)
