--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(simMhealth)
 export(simulate_boruvka)
 import(data.table)
 import(ggplot2)
+importFrom(dplyr,across)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -28,6 +30,7 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,mclapply)
 importFrom(parallel,parSapply)
 importFrom(parallel,stopCluster)
+importFrom(purrr,map_dbl)
 importFrom(stats,as.formula)
 importFrom(stats,lm)
 importFrom(stats,pnorm)
